# series-intro-to-github-flow-MaximPyanin

./: pyproject.toml  requirements.txt
.github/workflows/: test.yml  test_with_poetry.yml
tests/: file.py  test_f.py
