[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["MaximPyanin <maximpyanin@icloud.com>"]
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pymongo = "^4.5.0"
python-dotenv = "^1.0.0"
dependency-injector = "^4.41.0"
redis = "^5.0.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
